Fixes site on mobile

--- a/assets/global.css
+++ b/assets/global.css
@@ -26,21 +26,55 @@ main {
 
 .header {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   max-width: 64rem;
   margin: 1rem auto 6rem auto;
+  gap: 2rem;
+  padding: 0 2rem;
+}
+
+@media (min-width: 600px) {
+  .header {
+    flex-direction: row;
+  }
+}
+
+@media (min-width: 1200px) {
+  .header {
+    padding: 0;
+  }
 }
 
 .logo-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 1rem;
+}
+
+@media (min-width: 600px) {
+  .logo-container {
+    flex-direction: row;
+  }
 }
 
 .logo {
   height: 3.5rem;
   width: 3.5rem;
+}
+
+.heading-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+@media (min-width: 600px) {
+  .heading-container {
+    text-align: left;
+  }
 }
 
 .heading {
@@ -66,9 +100,6 @@ main {
 
 /** Hero ***************************************/
 
-.content-wrapper {
-}
-
 .content {
   max-width: 64rem;
   margin: 2rem auto;
@@ -76,12 +107,26 @@ main {
 
 .hero-wrapper {
   display: flex;
+  flex-direction: column;
   overflow: hidden;
   gap: 2rem;
 }
 
+@media (min-width: 600px) {
+  .hero-wrapper {
+    flex-direction: row;
+  }
+}
+
 .hero-cta {
   flex: 1;
+  padding: 0 2rem;
+}
+
+@media (min-width: 1200px) {
+  .hero-cta {
+    padding: 0;
+  }
 }
 
 .cta-heading {
@@ -124,6 +169,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+  padding: 0 1rem;
 }
 
 .card {
@@ -132,7 +178,7 @@ main {
   justify-content: start;
   align-items: center;
   flex-direction: column;
-  flex: 1 1 calc(33.33% - 1rem);
+  flex: 1 1 100%;
   box-sizing: border-box;
   border: 1px solid #bebebe;
   padding: 2rem;
@@ -140,8 +186,21 @@ main {
   border-radius: 12px;
 }
 
+@media (min-width: 600px) {
+  .card {
+    flex: 1 1 calc(50% - 2rem);
+  }
+}
+
+@media (min-width: 768px) {
+  .card {
+    flex: 1 1 calc(33.33% - 1rem);
+  }
+}
+
 .card p {
   margin: 0;
+  text-align: center;
 }
 
 .card-heading {
@@ -165,6 +224,22 @@ main {
   max-width: 64rem;
   margin: 4rem auto;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 1rem;
+  padding: 0 2rem;
+}
+
+@media (min-width: 600px) {
+  .footer {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 1200px) {
+  .footer {
+    padding: 0;
+  }
 }
